--- a/main.css
+++ b/main.css
@@ -1,9 +1,23 @@
 nav {
 	width: 100%;
-	border: solid;
+	background-color: #ffffff;
 }
 
 li {
 	list-style-type: none;
 }
 
+li > a {
+	color: #000;
+	text-decoration: none;
+}
+
+li > a:hover {
+
+}
+
+.middle {
+	background: linear-gradient(-45deg,#ec5252,#6e1a52);
+  	display: flex;
+  	justify-content: space-around;
+}
